// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

model User {
  id        Int      @id @default(autoincrement())
  email     String   @unique
  password  String
  role      Role     @default(USER)
  items     Item[]   @relation("UserItems", onDelete: Cascade)
  categories Category[] @relation("UserCategories", onDelete: Cascade)
  locations Location[] @relation("UserLocations", onDelete: Cascade)
  @@map("users")
}

model Category {
  id        Int      @id @default(autoincrement())
  name      String
  createdAt DateTime @default(now())
  userId    Int
  user      User     @relation("UserCategories", fields: [userId], references: [id])
  items     Item[]   @relation("CategoryItems", onDelete: Cascade)
  @@map("categories")
}

model Location {
  id        Int      @id @default(autoincrement())
  name      String
  createdAt DateTime @default(now())
  userId    Int
  user      User     @relation("UserLocations", fields: [userId], references: [id])
  items     Item[]   @relation("LocationItems", onDelete: Cascade)
  @@map("locations")
}

model Item {
  id          Int      @id @default(autoincrement())
  name        String
  description String?
  quantity    Int      @default(1)
  createdAt   DateTime @default(now())
  userId      Int
  categoryId  Int
  locationId  Int
  user        User     @relation("UserItems", fields: [userId], references: [id])
  category    Category @relation("CategoryItems", fields: [categoryId], references: [id])
  location    Location @relation("LocationItems", fields: [locationId], references: [id])
  @@map("items")
}

enum Role {
  USER
  ADMIN
}
